k8s/flux/clusters/talos-cluster/infra/network/mikrotik-headless-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: mikrotik-headless-proxy
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`mikrotik.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: mikrotik-headless-proxy
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`mikrotik.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: mikrotik-headless-proxy
      port: 80
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
